--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">AndroidExample</string>
+    <string name="no_network">无网络连接，请检查网络！</string>
+    <color name="white_50">#80ffffff</color>
+    <color name="white">#ffffff</color>
 </resources>
+
